@@ -1,5 +1,5 @@
 @echo off
 :: sqlline.bat - Windows script to launch SQL shell
-java -Djava.ext.dirs=%~dp0 sqlline.SqlLine %*
+java -cp "%~dp0\..\target\*" sqlline.SqlLine %*
 
 :: End sqlline.bat
